--- a/package.json
+++ b/package.json
@@ -7,9 +7,22 @@
     "build": "next build",
     "start": "next start"
   },
+  "keywords": [],
+  "author": "Nicolas HALLAERT",
+  "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^2.18.0",
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-markdown": "5.0.2"
+  },
+  "devDependencies": {
+    "@slimio/eslint-config": "^4.1.0",
+    "@types/next-auth": "3.1.14",
+    "@types/node": "14.14.6",
+    "@types/react": "16.9.56",
+    "prisma": "^2.18.0",
+    "typescript": "4.0.5"
   }
 }
