--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,20 @@
 {
-    "extends": "@slimio/eslint-config",
     "rules": {
-        "jsdoc/require-jsdoc": "off",
-        "require-atomic-updates": "off",
-        "arrow-body-style": "off",
-        "new-cap": "off",
-        "no-invalid-this": "off"
+        "indent": 2,
+        "linebreak-style": [
+            2,
+            "unix"
+        ]
+    },
+    "env": {
+        "es6": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
     }
 }
