--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^2.18.0",
+    "@types/bcrypt": "^3.0.0",
+    "bcrypt": "^5.0.1",
     "next": "10.0.8",
+    "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "5.0.2"
