--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^2.18.0",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "@types/bcrypt": "^3.0.0",
+    "micro-cors": "^0.1.1",
     "bcrypt": "^5.0.1",
     "next": "10.0.8",
     "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "5.0.2"
+    "react-markdown": "5.0.2",
+    "stripe": "^8.138.0",
+    "swr": "^0.5.3",
+    "use-shopping-cart": "^2.4.3"
   },
   "devDependencies": {
     "@slimio/eslint-config": "^4.1.0",
