--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@prisma/client": "^2.18.0",
     "@stripe/react-stripe-js": "^1.4.0",
     "@stripe/stripe-js": "^1.13.1",
-    "@types/bcrypt": "^3.0.0",
-    "micro-cors": "^0.1.1",
     "bcrypt": "^5.0.1",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "10.0.8",
     "next-auth": "^3.11.2",
     "react": "17.0.1",
@@ -27,7 +27,9 @@
     "use-shopping-cart": "^2.4.3"
   },
   "devDependencies": {
-    "@types/next-auth": "3.1.14",
+    "@types/bcrypt": "^3.0.0",
+    "@types/micro": "^7.3.3",
+    "@types/next-auth": "^3.7.1",
     "@types/node": "14.14.6",
     "@types/react": "16.9.56",
     "prisma": "^2.18.0",
