--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-markdown": "5.0.2",
     "stripe": "^8.138.0",
     "swr": "^0.5.3",
